<resources>
    <string name="app_name">FlowerShop</string>
    <string name="okButton">OK</string>
    <string name="choose_flower_color">Choose flower color:</string>
    <string name="blueFlowerColor">Blue</string>
    <string name="redFlowerColor">Red</string>
    <string name="yellowFlowerColor">Yellow</string>
    <string name="priceLabel">Price</string>
    <string name="minPriceValue">2$</string>
    <string name="middlePriceValue">5$</string>
    <string name="maxPriceValue">10$</string>
    <string name="order_result">Your order is %1$s flower on name %2$s. It will cost you %3$s.</string>
    <string name="yourNamePlaceholder">Your Name</string>
    <string name="notAllFieldsFilledPopup">Fill all of the fields</string>
    <string name="navigation_button">Orders</string>
    <string name="buttonResetRecords">Reset</string>
</resources>